[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "content-integrity-env"
version = "0.1.0"
description = "Content Integrity Investigator — OpenEnv RL Environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.3",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "huggingface-hub>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["content_integrity_env*"]